--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "axios": "^1.9.0",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
