--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-appwrite": "^0.7.4",
+    "react-native-autocomplete-input": "^5.5.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
