--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
     "react-native-appwrite": "^0.7.4",
     "react-native-autocomplete-input": "^5.5.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-controller": "^1.17.2",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
