--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
