--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.17.2",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
